--- a/includes/style.css
+++ b/includes/style.css
@@ -1699,7 +1699,6 @@ footer {
         right: 30px;
         width: 544px;
         border-top: 2px solid #87746a;
-        height: 487px;
     }
 
     #articleHeader {
@@ -2286,13 +2285,14 @@ footer {
     }
 
     /*********************************************************************************/
-    .contentArticle article {
+    #articleContentStyle1 {
         width: 524px;
         height: 124px;
-        position: relative;
+        position: absolute;
+        top: 22px;
     }
 
-    .contentArticle article p {
+    #articleContentStyle1 p {
         position: absolute;
         right: 125px;
         top: 15px;
@@ -2303,13 +2303,60 @@ footer {
         color: #87746a;
     }
 
-    .articleContentStyleImg {
+    #articleContentStyle1Img {
         margin-top: 20px;
         margin-right: 6px;
     }
+
+    #articleContentStyle2 {
+        width: 524px;
+        height: 124px;
+        position: absolute;
+        top: 146px;
+    }
+
+    #articleContentStyle2 p {
+        position: absolute;
+        right: 125px;
+        top: 15px;
+        direction: rtl;
+        font-family: ariel, Verdana, sans-serif;
+        font-size: 12px;
+        font-weight: bold;
+        color: #87746a;
+    }
+
+    #articleContentStyle2Img {
+        margin-top: 18px;
+        margin-right: 6px;
+    }
+
+    #articleContentStyle3 {
+        width: 524px;
+        height: 124px;
+        position: absolute;
+        top: 270px;
+    }
+
     .contentPicture {
         border: 2px solid #87746a;
         border-radius: 5px;
+    }
+
+    #articleContentStyle3 p {
+        position: absolute;
+        right: 125px;
+        top: 16px;
+        direction: rtl;
+        font-family: ariel, Verdana, sans-serif;
+        font-size: 12px;
+        font-weight: bold;
+        color: #87746a;
+    }
+
+    #articleContentStyle3Img {
+        margin-right: 6px;
+        margin-top: 19px;
     }
 
     .pGreen {
