--- a/includes/style.css
+++ b/includes/style.css
@@ -1702,7 +1702,7 @@ footer {
         border-top: 2px solid #87746a;
     }
 
-    #articleHeader {
+    .contentArticle > h1:first-child {
         direction: rtl;
         width: 529px;
         height: 20px;
@@ -1726,7 +1726,7 @@ footer {
 
     }
 
-    #vaccumAarticleStyle h2 {
+    #vaccumAarticleStyle > h1 {
         margin-top: 15px;
         margin-right: 15px;
         font-family: ariel, Verdana, sans-serif;
