--- a/includes/style.css
+++ b/includes/style.css
@@ -5,17 +5,15 @@
   Date: 03-01-2015
  -----------------------------------*/
 
-* {
+*{
     padding:0;
     margin:0;
 }
-
-
 header,main,footer,aside,nav,article,section{
     display: block;
 }
-@media all and (max-width: 640px){
 
+@media all and (max-width: 640px){
     .clear {
         clear: both;
     }
@@ -81,15 +79,15 @@ header,main,footer,aside,nav,article,section{
         margin: 0 auto;
     }
 
-    /*******************************************************************/
-    /*header style*/
+    /*-------------------------------------------*/
+
+    /*****          Header            *****/
     header {
         background-color: #ffffff;
         width: 100%;
         height: 107px;
 
     }
-
     #logo {
         position: absolute;
         width: 100%;
@@ -97,8 +95,9 @@ header,main,footer,aside,nav,article,section{
         background-image: url("../images/logo.png");
         background-repeat: no-repeat;
     }
-    /*******************************************************************/
-    /*marquee style*/
+    /*-------------------------------------------*/
+
+    /*****          Marquee            *****/
 
     #marqueeDisplay{
         background-color: #00b25a;
@@ -120,7 +119,7 @@ header,main,footer,aside,nav,article,section{
 
 
     /*-------------------------------------------*/
-
+    /*****          Responsive Menu            *****/
     #appMenu{
         direction: rtl;
         position: absolute;
@@ -135,7 +134,7 @@ header,main,footer,aside,nav,article,section{
         right:0px;
     }
 
-
+    /*-------------------------------------------*/
     /*****          Top Nav style           *****/
     #responsiveTopNav{
         height: 45px;
@@ -233,15 +232,10 @@ header,main,footer,aside,nav,article,section{
     #topNav{
         display:none;
     }
-
-
-#tickerText{
-    display: none;
-}
-#contentWorld{
-    display: none;
-}
-
+    #contentWorld{
+        display: none;
+    }
+    /*-------------------------------------------*/
     /*Main Page Slide Photo*/
     #slideshow {
         position: relative;
@@ -1227,7 +1221,7 @@ footer {
         list-style-type: none;
         background-color: #87746a;
         margin-top: 8px;
-        border: 0px;
+        border: 0;
         border-radius: 25px;
         padding-top: 4px;
         padding-bottom: 4px;
@@ -1286,7 +1280,7 @@ footer {
         color: #87746a;
         font-size: 13px;
         background-color: #edeae9;
-        border: 0px;
+        border: 0;
         margin-top: 2px;
     }
 
@@ -1356,8 +1350,8 @@ footer {
     ul.images,ul.imagesRecipe,ul.imagesFienHome {
         list-style-type: none;
         position: relative;
-        top: 0px;
-        left: 0px;
+        top: 0;
+        left: 0;
     }
 
     ul.images li ,ul.imagesRecipe li, ul.imagesFienHome li{
@@ -1487,7 +1481,7 @@ footer {
         width: 150px;
         height: 20px;
         background-color: #edeae9;
-        border: 0px;
+        border: 0;
         font-family: ariel, Verdana, sans-serif;
         color: #87746a;
         font-size: 13px;
@@ -2063,7 +2057,7 @@ footer {
         color: #87746a;
         font-size: 13px;
         background-color: #edeae9;
-        border: 0px;
+        border: 0;
         margin-top: 2px;
     }
 
@@ -2073,9 +2067,9 @@ footer {
         height: 21px;
         font-family: ariel, Verdana, sans-serif;
         color: #87746a;
-        font-size: 13px;
+        font-size:13px;
         background-color: #edeae9;
-        border: 0px;
+        border:0;
         margin-top: 2px;
     }
 
@@ -2392,7 +2386,7 @@ footer {
     .greenAfixPos {
         position: absolute;
         right: 496px;
-        bottom: 0px;
+        bottom: 0;
     }
 
     /*****          Footer style            *****/
@@ -2440,7 +2434,7 @@ footer {
 
     #footerSharing {
         position: absolute;
-        right: 0px;
+        right: 0;
         width: 500px;
         height: 17px;
         border-left: 1px solid #43332c
