--- a/includes/style.css
+++ b/includes/style.css
@@ -968,7 +968,7 @@ footer {
         color: #87746a;
         padding-left: 15px;
         padding-bottom: 14px;
-        margin-right: 198px;
+        margin-right: 190px;
     }
 
     .articleLink a:link, .articleLink a:visited {
@@ -1822,18 +1822,14 @@ footer {
     }
 
     #recipeAarticleStyle {
+        position: relative;
         width: 544px;
-        height: 403px;
-        position: absolute;
-        top: 22px;
     }
 
     #recipeAarticleStylePara {
-        position: absolute;
-        top: 16px;
-        right: 17px;
-        width: 495px;
         direction: rtl;
+        width: 495px;
+        margin:16px 17px 0 0;
         font-family: ariel, Verdana, sans-serif;
         font-size: 12.5px;
         color: #87746a;
@@ -1849,11 +1845,7 @@ footer {
     }
 
     #picRecipe {
-        width: 512px;
-        height: 165px;
-        position: absolute;
-        top: 73px;
-        right: 12px;
+        margin-right: 17px;
     }
 
     #picRecipe img:first-child {
@@ -1875,11 +1867,7 @@ footer {
     }
 
     #h3recipetitle {
-        position: absolute;
-        top: 213px;
-        right: 16px;
-        width: 510px;
-        height: 19px;
+        margin-right: 17px;
     }
 
     .h3RecipeTitle {
