--- a/includes/style.css
+++ b/includes/style.css
@@ -1829,7 +1829,7 @@ footer {
     #recipeAarticleStylePara {
         direction: rtl;
         width: 495px;
-        margin:16px 17px 0 0;
+        margin:16px 17px 10px 0;
         font-family: ariel, Verdana, sans-serif;
         font-size: 12.5px;
         color: #87746a;
