--- a/includes/style.css
+++ b/includes/style.css
@@ -2058,7 +2058,8 @@ footer {
 
     #submitForm {
         position: absolute;
-        top: 292px;
+        top: 290px;
+        right:220px;
         width: 50px;
         height: 22px;
         font-weight: bold;
